@@ -1,6 +1,7 @@
 applauncherd (3.0.1) unstable; urgency=low
 
   * Changes: Adds new test for applauncherd re-exec. Checking state of running application when it is updated.
+  * Changes: Fix python broken pipe randomly happened for Popen
 
  -- Alexey Shilov <alexey@trdhcp147241>  Mon, 14 Nov 2011 13:39:38 +0200
 
